# sekretariat

./: .coockiecutter.json  .env  .gitignore  .gitlab-ci.yml  .travis.yml  Aptfile  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Procfile  README.rst  app.json  bitbucket-pipelines.yml  conftest.py  gulpfile.js  manage.py  newrelic.ini  package-lock.json  package.json  pyproject.toml  runtests.py  setup.cfg  setup.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
assets/compressed/: script.a682b23b.js  style.66150fb3.css  style.c350f40c.css
assets/css/: bootstrap4.css  default.css  font-awesome4.css  font-awesome5.css  screen.css
data/: README.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/_static/: sekretariat.css
fixtures/: auth.json  auth.yaml  budget.json  contenttypes.json  fixtures_config.yml
fixtures/test_data/: budget.xls  budget.xlsx
jinja2/: home.html  robots.txt  sitemap.xml
jinja2/base/: basic.html  confirmation.html  default.html  dialog.html  dialog_basic.html  page.html  page_form.html
jinja2/bootstrap/: alerts.html  macros.html  modal.html  pagination.html  toastr.html
jinja2/common/: demo.html  status.html
jinja2/django_registration/: activate.html  activation_complete.html  activation_email_body.txt  activation_email_subject.txt  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email_pretty.html  password_reset_form.html  registration_complete.html  registration_form.html  social_buttons.html  (+1 more)
locale/: babel.cfg  django.pot
logs/: README.md
profile.d/: pip.sh  xmlsec1.sh
requirements/: base.txt  development.txt  testing.txt  tooling.txt
static/: staticfiles.json
tests/: test_website.py
theme/: README.md
(+242 files in other folders)
