[tool.poetry]
name = "sekretariat"
version = "0.1.0"
description = ""
authors = ["Janusz Skonieczny <git.js@bravelabs.pl>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"
python3-saml = "^1.6"
python-dotenv = "^0.10.3"
click = "^7.0"
colorlog = "^4.0"
crayons = "^0.2.0"
dinja2 = "^0.1.0"
django-admin-ordering = "^0.11.0"
django-admin-relation-links = "^0.2.0"
django-assets = "^0.12.0"
django-avatar = "^4.1"
django-bootstrap-form = "^3.4"
django-babel = "^0.6.2"
django-debug-toolbar = "^1.11"
django-email-queue = "^0.23.0"
django-environ = "^0.4.5"
django-error-views = "^0.5.1"
django-formtools = "^2.1"
django-import-export = "^1.2"
django-pascal-templates = "^0.8.13"
django-powerbank = "^0.4.2"
django-pure-pagination = "^0.3.0"
django-registration = "^3.0"
django-reversion = "^3.0"
django2-babel = "^0.6.3"
django-user-agents = "^0.3.2"
djangorestframework = "^3.9"
djangorestframework-jsonapi = "^2.7"
enum34 = "^1.1"
html2text = "^2018.1"
isoweek = "^1.3"
isodate = "^0.6.0"
jinja2-highlight = "^0.6.1"
markdown = "^3.1"
invoke = "^1.2"
maya = "^0.6.1"
newrelic = "^4.20"
psycopg2-binary = "^2.8"
pycountry = "^18.12"
pytz = "^2019.1"
pathlib = "^1.0"
pendulum = "^2.0"
sentry-sdk = "^0.9.0"
raven = "^6.10"
requests = "^2.22"
social-auth-app-django = "^3.1"
social-auth-core = "^3.2"
whitenoise = "^4.1"


[tool.poetry.dev-dependencies]
tox = "^3.12"
coveralls = "^1.8"
factory-boy = "^2.12"
mock = "^3.0"
pytest = "=3.1.3"
pytest-doctest-ellipsis-markers = "^0.1.0"
pytest-html = "^1.20"
pytest-lazy-fixture = "^0.5.2"
pytest-mock = "^1.10"
pytest-splinter = "^2.0"
pytest-sugar = "^0.9.2"
splinter = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
